--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,12 @@
-<div class="container">
+<div class="container" *ngIf="isLogin; else loginTemplate">
     <div>
         <app-header></app-header>
-        <div class="mt-2 flex items-center justify-center">
+        <div class="mt-2 rounded">
             <router-outlet />      
         </div>
     </div>
 </div>
+<ng-template #loginTemplate>
+    <router-outlet></router-outlet>
+</ng-template>     
+
