--- a/src/app/libs/components/header/header.component.html
+++ b/src/app/libs/components/header/header.component.html
@@ -1,4 +1,7 @@
 <div class="flex justify-center items-center  border-b-2 border-meta-3 border-opacity-20 py-2">
-    <!-- <logout></logout> -->
+    <div (click)="logOut()">
+        <logout></logout>
+    </div>
+    
     <span class="ml-2">cc</span>
 </div>
