--- a/src/app/pages/class/class.component.html
+++ b/src/app/pages/class/class.component.html
@@ -1,8 +1,10 @@
 <div class="flex flex-col">
     <div>
         @for (item of classList; track item.id) {
-            <div class="bg-green-400 cursor-pointer m-2 p-5 rounded flex justify-center items-center">{{ item.name }}</div>
-            } @empty {
+            <div class="bg-green-400 cursor-pointer m-2 p-5 rounded flex justify-center items-center">
+                {{ item.class.name }}
+            </div>
+        } @empty {
             ...
         }
     </div>
